[tool.poetry]
name = "pythonic-garage-band"
version = "0.1.0"
description = ""
authors = ["Dario Thornhill <dario.thornhill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
mocker = "^1.1.1"
mypy = "^0.790"
PyYAML = "^5.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
